<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/release_time_enabler_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/release_time_group" />


    <include android:id="@+id/release_time_chip_group_include" layout="@layout/view_release_time_chip_group"/>

    <CheckBox
        android:id="@+id/genre_enabler_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/genre_group" />

    <include android:id="@+id/genre_chip_group_include" layout="@layout/view_genre_chip_group"/>

</LinearLayout>