<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/seek_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        >

        <TextView
            android:id="@+id/left_side_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/right_side_text_view"

            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="false"

            android:text=""
            android:textAlignment="viewStart"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/right_side_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="@color/text"
            android:textAlignment="viewEnd"
            android:text=""
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "@style/MySeekBar"
            android:layout_below="@id/left_side_text_view"
            android:saveEnabled="false" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_layout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/play"
            app:icon="@android:drawable/ic_media_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pause_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:text="@string/pause"
            app:icon="@android:drawable/ic_media_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_button"
            app:layout_constraintEnd_toStartOf="@+id/stop_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:text="@string/stop"
            app:icon="@android:drawable/picture_frame"
            app:layout_constraintStart_toEndOf="@+id/pause_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>