...
    <string name="search">Search phrase: </string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="check_internet_connection">An error occurred.\nCheck internet connection</string>
    <string name="player_can_not_play">An error occurred.\nPlayer can not play the song</string>

    <string name="no_album_web_page">No web page for this album</string>
    <string name="no_artist_web_page">No web page for this artist</string>

    <string name="go_to_artist_albums_fragment">Artist\'s albums</string>
...
